# slam-from-scratch

./: Planning.txt  README.md  slam_grid_viewer.py  slam_viewer_pygame.py
CARMEN_testing/: carmen_replay.py
Visualizers/: slam_grid_viewer.py
configs/: intel.json  turtlebot.json
report/: ReportDescription.txt  StructuredReport.txt  textsections.txt
report/LatexReport/: MarioPardoHonoursProj.aux  MarioPardoHonoursProj.fdb_latexmk  MarioPardoHonoursProj.fls  MarioPardoHonoursProj.lof  MarioPardoHonoursProj.tex  MarioPardoHonoursProj.toc
report/images/: PG-SLAM_Architecture.drawio
report/images/Experiments/GridWorld/: GridWorld2_LC_Logs.txt
slam_core/: CMakeLists.txt
slam_core/src/: PoseGraph.cpp  PoseGraph.h  feature_extractor.cpp  feature_extractor.h  icp_matcher.cpp  icp_matcher.h  lidar_processor.cpp  lidar_processor.h  main.cpp  messaging_helper.cpp  messaging_helper.h  occupancy_grid.cpp  occupancy_grid.h  pose_graph_optimizer.cpp  pose_graph_optimizer.h  scan_capture.h  slam_config.cpp  slam_config.h  types.h  zmq_bridge.cpp
slam_core/tests/: test_icp_transform.cpp  test_icp_vs_reference.cpp  test_scan_conversion.cpp
webots/controllers/TurtleBotGoForward/: TurtleBotGoForward.py  robot_comm.py
webots/objectfiles/: create_circular_wall.py
webots/worlds/: .slam-lab.wbproj  BallWorld.wbt  GridWorld.wbt  HallwayWorld.wbt  HallwayWorld_Landmarks.wbt  RoundWalls.wbt  RoundWalls_Landmarks.wbt  UltraRound.wbt  apartment.wbt  slam-lab.wbt
